# damm-v2-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION_GUIDE.md  PR_BODY.md  README.md  devnet-test-clmm.ts  docs.md  package.json  pnpm-lock.yaml  push-and-pr.sh  tsconfig.json  vitest.config.ts
cp-amm-interface/: Cargo.toml
examples/: addDlmmLiquidity.ts  createCustomizablePoolAndLockLiquidity.ts  createDlmmPool.ts  createPoolAndLockWithConfig.ts  createPoolAndTransferPosition.ts  createPoolWithDynamicConfigAndMarketCapFee.ts  createPositionAndLock.ts  getPositionAndClaimFees.ts
rust-client/: Cargo.toml
rust-client/src/: lib.rs  quote.rs
rust-client/src/conversions/: activation_type.rs  collect_fee_mode.rs  mod.rs  token_program_flag.rs
rust-client/src/extensions/: fee.rs  mod.rs  pool.rs
rust-client/src/math/: curve.rs  mod.rs  u128x128_math.rs
scripts/: 01_createStaticConfig.ts  02_updateDynamicFeeForStaticConfig.ts  03_createDynamicConfig.ts  04_createPrivateStaticConfig.ts  05_initializeReward.ts  06_createPoolFromDynamicConfig.ts  README.md  addLiquidity.js  claimProtocolFee.ts  comprehensiveClaimProtocolFee.ts  createClaimFeeOperator.ts  createConfig.ts  createPool.js  createPool.ts  createPrivateConfig.ts  fundReward.ts  getProtocolFeesByTokenMints.ts  initializeReward.ts  package.json  singleClaimProtocolFee.ts  updateConfigDynamicFee.ts
src/: CpAmm.ts  constants.ts  errors.ts  index.ts  pda.ts  types.ts  utils.ts
tests/: addLiquidity.test.ts  claimFee.test.ts  claimFee2.test.ts  closePosition.test.ts  collectFeeMode.test.ts  createPosition.test.ts  (+19 more)
(+121 files in other folders)
