[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"
description = "Rust sdk for Cp-amm"
authors = ["Minh <minh@racoons.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "cp_amm_sdk"

[dependencies]
static_assertions = "1.1.0"
ruint = "1.3.0"
num-traits = "0.2.19"
num_enum = "0.7.0"
num = "0.4.3"
anyhow = "1.0.71"
cp-amm-interface = { path ="../cp-amm-interface" }
